[package]
name = "oxyd"
version = "0.1.0"
authors = ["monoko <monoko@riseup.net>"]
edition = "2018"

[dependencies]
ecies-ed25519 = {version = "0.5.0", default-features = false, features = ["pure_rust"]}
rand = {version = "0.7.3", features = ["wasm-bindgen"]}
chacha20poly1305 = "0.9.0"
rust-argon2 = "1.0"

# wasm
js-sys = "0.3.46"
wasm-bindgen = "0.2.69"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
